# fftx

./: CMakeLists.txt  README.md  distributed.html  index.html  searchindex.js
.doctrees/: distributed.doctree  environment.pickle
.github/workflows/: build-sphinx.yml  ubuntu.yml
CMakeIncludes/: FFTXCmakeFunctions.cmake  FFTXSetup.cmake
docs/: CMakeLists.txt  Doxyfile.in  README.md  apis.html  apis.rst  bibliography.html  bibliography.rst  buildsite.sh  collaborations.rst  conf.py  contribute.html  distributed.html  extending.html  external.rst  faq.html  genindex.html  gethelp.html  index.html  index.rst  install.html  install.rst  introduction.html  introduction.rst  objects.inv  python.rst  search.html  searchindex.js  team.html
examples/: README.md
examples/hockney/: CMakeLists.txt
examples/rconv/: testrconv_lib.cpp
examples/verify/: CMakeLists.txt  VerifyTransform.hpp  testverify_device.cpp  testverify_device.cu  testverify_fftw.cpp  testverify_mkl.cpp
src/include/: fftx3.hpp  fftx3utilities.h  interface.hpp
